--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,18 @@
 <resources>
     <string name="app_name">JobLinks</string>
     <string name="title_activity_login">Sign in</string>
-
+    <string name="title_activity_register_account">Resgister</string>
+    <string name="title_activity_search_job">Fiter</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
+    <string name="prompt_password">Password</string>
+    <string name="prompt_first_name">First name</string>
+    <string name="prompt_keyword">Key word</string>
+    <string name="prompt_search">Search</string>
+    <string name="prompt_cities">City</string>
+    <string name="prompt_last_name">Last name</string>
     <string name="action_sign_in">Sign in or register</string>
+    <string name="action_register">Register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
@@ -18,4 +25,11 @@
     <string name="title_activity_fullscreen">FullscreenActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_sample_left_menu">SampleLeftMenuActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+
 </resources>
