--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,7 @@
     <string name="first_name_required">First name cannot be empty.</string>
     <string name="last_name_required">Last name cannot be empty.</string>
     <string name="password_required">Password cannot be empty.</string>
-    <string name="invalid_name">name is invalid.</string>
+    <string name="invalid_name">Name is invalid.</string>
+    <string name="invalid_length_name">The length of name is too short.</string>
+    <string name="email">Email: </string>
 </resources>
