--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="invalid_name">Name is invalid.</string>
     <string name="invalid_length_name">The length of name is too short.</string>
     <string name="email">Email: </string>
+    <string name="invalid_email">Email is invalid.</string>
 </resources>
