--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="prompt_last_name">Last name</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_register">Register</string>
+    <string name="action_logout">Logout</string>
+    <string name="action_forgot_password">Forgot password ?</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
