--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="prompt_salary">Salary</string>
     <string name="action_sign_in">Sign in</string>
     <string name="action_register">Register</string>
+    <string name="link_to_register">No account yet? Create one.</string>
     <string name="action_logout">Logout</string>
     <string name="action_forgot_password">Forgot password ?</string>
     <string name="action_sign_in_short">Sign in</string>
@@ -28,6 +29,8 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="message_login">Greate to see you again</string>
+    <string name="message_login2">and have a good day.</string>
     <string name="message_register">Create Account</string>
     <string name="message_register2">and get good jobs.</string>
     <string name="title_activity_fullscreen">FullscreenActivity</string>
