--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tab_profile">Profile</string>
     <string name="tab_home">Home</string>
+    <string name="message_welcome">Welcome to JobLinks!</string>
 </resources>
