--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,8 @@
     <string name="no_internet3">No Internet found!</string>
     <string name="something_wrong">This is something wrong!</string>
     <string name="try_again">TRY AGAIN</string>
+    <string name="drawer_item_home">Home</string>
+    <string name="drawer_item_settings">Settings</string>
+    <string name="drawer_item_logout">Logout</string>
+    <string name="drawer_item_login">Login</string>
 </resources>
