--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,8 @@
     <string name="try_again">TRY AGAIN</string>
     <string name="drawer_item_home">Home</string>
     <string name="drawer_item_settings">Settings</string>
-    <string name="drawer_item_logout">Logout</string>
-    <string name="drawer_item_login">Login</string>
+    <string name="drawer_item_saved_job">Saved Jobs</string>
+    <string name="drawer_item_applied_job">Applied Jobs</string>
+    <string name="drawer_item_login">Sign In</string>
+    <string name="drawer_item_logout">Sign Out</string>
 </resources>
