--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,9 @@
     <string name="please_sign_in">Please sign in to publish a job.</string>
     <string name="action_register">Register</string>
     <string name="link_to_register">No account yet? Create one.</string>
+    <string name="home_page">Back to home.</string>
     <string name="action_logout">Logout</string>
+    <string name="about">About</string>
     <string name="action_forgot_password">Forgot password ?</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
@@ -83,4 +85,6 @@
     <string name="drawer_item_login">Sign In</string>
     <string name="drawer_item_register">Register</string>
     <string name="drawer_item_logout">Sign Out</string>
+    <string name="title_activity_job_details">JobDetailsActivity</string>
+    <string name="details">Details</string>
 </resources>
