--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="prompt_last_name">Last name</string>
     <string name="prompt_salary">Salary</string>
     <string name="action_sign_in">Sign in</string>
+    <string name="action_sign_out">Sign out</string>
     <string name="please_sign_in_to_publish">Please sign in to publish a job.</string>
     <string name="please_sign_in_to_apply">Please sign in to apply job.</string>
     <string name="action_register">Register</string>
@@ -24,6 +25,10 @@
     <string name="home_page">Back to home.</string>
     <string name="action_logout">Logout</string>
     <string name="about">About</string>
+    <string name="no_applied_jobs">No applied jobs</string>
+    <string name="applied_jobs">Applied jobs</string>
+    <string name="no_saved_jobs">No saved jobs</string>
+    <string name="saved_jobs">Saved jobs</string>
     <string name="action_forgot_password">Forgot password ?</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
@@ -90,4 +95,6 @@
     <string name="drawer_item_logout">Sign Out</string>
     <string name="title_activity_job_details">Job Details</string>
     <string name="details">Details</string>
+    <string name="action_publish_job">Publish Job</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
